namespace TreeCompressionPipeline.TreeStructure;

public interface ITreeVisitor
{
    void Visit(ITreeNode node);
}
